# autowork

./: README.md  pyproject.toml
src/autowork/tests/: OAI_CONFIG_LIST  main.py  simple_chat_date.py  simple_chat_file.py  simple_chat_rag.py  simple_chat_weather.py
